# Cities2-Chief-of-Staff

./: .gitignore  AGENTS.md  INSTALL.md  PRIVACY.md  README.md  mcp.config.example.json  pyproject.toml
.agents/plugins/: marketplace.json
chief_of_staff/: analysis.py  mcp_server.py  models.py  plugin_metadata.py  plugin_packages.py  sources.py
cityadvisor/: __init__.py  analysis.py  cli.py  mcp_server.py  paths.py  save_investigator.py  sources.py
docs/superpowers/plans/: 2026-06-14-chief-of-staff-codex-plugin.md  2026-06-15-chief-of-staff-claude-target.md
docs/superpowers/skill-tests/: 2026-06-14-cities2-chief-of-staff.md
docs/superpowers/specs/: 2026-06-14-chief-of-staff-codex-plugin-design.md  2026-06-15-chief-of-staff-claude-target-design.md
plugins/cities2-chief-of-staff/: README.md
plugins/cities2-chief-of-staff/.codex-plugin/: plugin.json
skills/brief/: SKILL.md
skills/cities2-chief-of-staff/: SKILL.md
tests/: save_investigator_fake.py  test_cli.py  test_entrypoints.py  test_mcp_server.py  test_packaging.py  test_paths.py  test_privacy.py  test_public_identity.py  test_skill_content.py  test_sources.py
